scrollbar issues fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -921,3 +921,12 @@ h6 {
   font-size: 16px;
   color: #ccc;
 }
+
+.no-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
